tests/integration/snapshots/integration__conformance__n_number_0.3e.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[0.3e]
stdout ---

stderr ---
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:6
  |
1 | [0.3e]
  |     -^
  |     |
  |     exponent found here
  |
help: remove the exponent
  |
1 - [0.3e]
1 + [0.3]
  |
help: insert a placeholder digit
  |
1 | [0.3e5]
  |      +
